A fix (bug #5056: defaults-extra-file throws no error when file is inaccessible).